--- a/2,1.html
+++ b/2,1.html
@@ -5,7 +5,7 @@
     </head>
     <body style="font-family:Arial">
         <dl> 
-            <dt><strong>Поддержка программных продуктов</strong></dt>
+            <dt><strong>Поддержка программных продуктов 111</strong></dt>
            <dd>При возникновении вопроса, относящегося к работе с Microsoft&reg Windows 98, в первую очередь следует заглянуть в документацию, обратиться к справочной системе или заглянуть в текстовые файлы с последними сведениями. Если ответ на вопрос найти так и не удалось, Microsoft предлагает широкий спектр технической поддержки, начиная со средств самостоятельного поиска ответов и кончая консультацией инженера из службы технической поддержки Microsoft.</dd> 
         </dl>
            <dt><strong>Интерактивная техническая поддержка Microsoft</strong></dt> 
